@@ -2,18 +2,20 @@ Setup av system:
 JDK version: 13, no new language features
 JFX version: 13
 
---EDIT!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-Det er ikke lenger nødvendig med instillingene nederst, men de hjelper. Dette grunnet at maven nå er fungerende både på kompilering og launching gjennom plugin modulen der en benytter underscriptene: javafx:compile og javafx:run :D
+Method 1:
+	Step 1: Double click jar file.
 
-
-
-VM options:
---module-path "PATH TO FOLDER\SET_gruppe\libraries\javafx-sdk-13\lib" --add-modules javafx.controls,javafx.fxml 
-
-
-1: Legg til vm options da maven sitt launch system ikke fungerer helt riktig enda pga. refleksjon.
-
-2: launch ved å bruke MainJavaFX i IntelliJ, ikke med Maven.
-
-Husk å endre den gamle JDK-en i systemet deres fra før, til den nye nr 13. Dette gjelder da under: Project settings, og videre under div faner i menyen.
-
+Using MAC? try this	
+Method 2:
+	Step 1: Download latest java https://www.oracle.com/technetwork/java/javase/downloads/jdk13-downloads-5672538.html
+	
+	Step 2: Go to finder: type terminal. Type: java -version. If nothing comes up repeat method 2.
+	
+	Step 3: Type in: cd "path to download place". Tips: press tab for auto complete, and enter for execution.
+	
+	Step 4: Type in: "java -jar SETProject.jar" Then press enter.
+	
+	
+In intellij with source files, try this:
+	Given that you do have the project pom file,
+	right click on Main, and select launch, green icon.
